# BakingRL

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-macos.yml  build-windows.yml
doc_bak/: README.md
doc_bak/doc/: ARCHITECTURE.md  (+6 more)
docs-src/: README.md  _nav.qd  _setup.qd  main.qd
plan/: README.md  runtime-api-2.3.md
refactor/: 01-core-principles.md  02-manifest-v4.md  03-telemetry-state-hub.md  04-runtime-node-and-sidecars.md  05-plugin-settings.md  06-visuals-and-config-surfaces.md  07-obs-gateway-plugin.md  08-sdk-and-templates.md  09-testing-and-migration.md  plan.md
scripts/: prepare-node-sidecar.mjs  smoke-extension-host.mjs
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin-windows.json
src-tauri/extension-host/: bootstrap.ts
src-tauri/icons/: icon.icns
src-tauri/src/: bus.rs  ingestor.rs  lib.rs  main.rs  models.rs  obs_gateway.rs  registry.rs  window_watcher.rs
src-tauri/src/plugin_host/: child_process.rs  connector_runtime.rs  descriptors.rs  diagnostics.rs  extension_host_runtime.rs  json_store.rs  layout_documents.rs  marketplace.rs  marketplace_transaction.rs  mod.rs  module_protocol.rs  package_files.rs  plugin_storage.rs  runtime_module_loader.rs  runtime_specs.rs  service_registry.rs  service_runtime.rs  settings_contract.rs  sidecar_runtime.rs  surface_runtime.rs
src-tauri/src/plugin_package/: bundle.rs  install.rs  manifest.rs  marketplace.rs  mod.rs  permissions.rs
src-tauri/src/plugin_v2/: bundle.rs  install.rs  manifest.rs  marketplace.rs  mod.rs  permissions.rs
(+76 files in other folders)
