[package]
name = "bakingrl"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bakingrl_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["full", "io-util", "macros", "net", "rt-multi-thread"] }
url = "2.5.8"
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
deno_core = "0.400.0"
deno_error = "0.7.1"
notify = "8"
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tokio-tungstenite = "0.29"
active-win-pos-rs = "0.10.0"
hex = "0.4"
reqwest = "0.13.3"
sha2 = "0.10"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
base64 = "0.22"
ed25519-dalek = "2.2"

[dev-dependencies]
tempfile = "3"
